# leverage-inst-knowl

./: .gitignore  CLAUDE.md  claude-managed-agents.md  domain-name.md  faq.md  lik-1-overview.md  lik-3-architecture-concise.md  lik-4-strategy.md  lik-architecture-concise.md  lik-architecture.md  lik-dl-storage.md  lik-examples.md  lik-strategy.md  limitations.md  mcp-availability.md  mise.toml
discovery-catalog-sync/: SKILL.md
docs/: deploy-runbook.md  oauth.md
infra/: .terraform.lock.hcl  README.md  backend.tf  database.tf  iam_github_oidc.tf  lik_mcp.tf  lik_ui.tf  outputs.tf  prod.tfvars.example  providers.tf  set-ssm-secrets.sh  ssm-secrets.example  ssm.tf  tf.sh  variables.tf
lik-mcp/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
lik-mcp/db/: init.sql
lik-mcp/scripts/: init_db.py
lik-mcp/src/lik_mcp/: __init__.py  __main__.py  auth.py  catalog.py  citations.py  confirmations.py  db.py  server.py  settings.py
lik-mcp/tests/: conftest.py  test_catalog.py  test_confirmations.py  test_server_logging.py  test_settings.py  test_surface.py
lik-ui/: .env.example  .gitignore  Dockerfile  README.md  SMOKE.md  docker-compose.yml  pyproject.toml
scripts/: README.md  attach_skills_to_agent.py  deploy_skills.py  pyproject.toml  test_attach_skills_to_agent.py  test_deploy_skills.py
v0.4/: 01-overview.md  02-concepts.md  03-examples.md  04-architecture.md  04-strategy.md  05-access-control.md  05-architecture.md  06-access-control.md  06-storage.md  07-storage.md  07-strategy.md  08-open-questions.md  bi-pipeline.md
(+82 files in other folders)
