[project]
name = "lik-mcp"
version = "0.1.0"
description = "Discovery Layer MCP service fronting the Catalog + Confirmations Postgres store."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
